Add `BundleKBean` for self-contained app bundling with jpackage/jlink